Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-141885

QRangeModel with tree of gadgets doesn't work

XMLWordPrintable

    • 37d502557 (dev), 5ad86db42 (6.10)

      See the attached example, which is a simplified version of https://github.com/qt/qtbase/blob/dev/tests/manual/corelib/itemmodels/qrangemodel/main.cpp

      I would expect that I did not need to implement the tuple protocol, given the rows are gadgets. Is this something missing in Qt?

      Cheers
      Jesper.

        For Gerrit Dashboard: QTBUG-141885
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            blackie Jesper K. Pedersen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes